# nasa_hackathon_seismic_detection

./: .gitignore  ARCHITECTURE.md  ML_PIPELINE_README.md  PROJECT_SUMMARY.md  README.md  Readme.md  TRAINING_GUIDE.md  demo_notebook.ipynb  generate_demo_plots.py  inference.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_architecture.py  train_model.py
.git.bfg-report/2024-11-06/12-34-57/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
.github/workflows/: ci.yml
.ipynb_checkpoints/: demo_notebook-checkpoint.ipynb
assets/: demo.cast  metrics.json
demo/: record_demo.sh
entrainement.ipynb/: entrainement.ipynb
my_model_demo/: app.py
my_model_demo/static/: style.css
my_model_demo/templates/: index.html  result.html
src/: __init__.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  cnn.py
src/training/: __init__.py  evaluate.py  train.py
src/utils/: __init__.py  spectrogram.py
tests/: test_pipeline.py
